# ET---AI

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  persistence.py  scheduler.py
backend/app/api/: routes.py  websocket.py
backend/app/engines/: cascade.py  live_scores.py  orchestrator.py  risk_score.py  scenarios.py  sourcing.py  spr_lp.py
backend/app/ingest/: ais.py  baselines.py  coal.py  commodity_prices.py  gdelt.py  lng.py  minerals.py  news.py  pump_prices.py  sanctions.py  solar.py  vedas.py
backend/app/llm/: prompts.py  rag.py  summarise.py
backend/data/: state.db-shm  state.db-wal
backend/data/fixtures/: commodity_prices.json  critical_minerals.json  dependency_graph.json  gdelt_events.json  india_imports.json  llm_responses.json  lng_terminals.json  pipelines.json  refineries.json  sanctions.json  solar_imports.json  vessels.json
backend/tests/: conftest.py  test_cascade.py  test_pump_prices.py  test_risk_score.py  test_routes_smoke.py  test_scenarios.py  test_spr_lp.py
docs/: architecture.md  architecture_diagram.md  assumptions.md  demo_script.md  presentation_outline.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ChatDrawer.tsx  Chip.tsx  CommodityBadge.tsx  CommodityTicker.tsx  CostStrip.tsx  ImpactBar.tsx  KpiTile.tsx  MetricCard.tsx  MiniBar.tsx  NarrativeFeed.tsx  RiskBadge.tsx  RiskTicker.tsx  SPRChart.tsx  SanctionAlert.tsx  ScenarioCard.tsx  SectionHeader.tsx  VesselMap.tsx
frontend/src/lib/: api.ts  fmt.ts  store.ts  types.ts  ws.ts
frontend/src/pages/: Backtest.tsx  Baselines.tsx  CompoundScenarios.tsx  CostOfInaction.tsx  Dashboard.tsx  DigitalTwin.tsx  ImpactCascade.tsx  SPR.tsx  ScenarioCompare.tsx  ScenarioRun.tsx  Scenarios.tsx  Sourcing.tsx  StressTest.tsx
